src/test/deca/context/invalid/sansObjet/Not.deca
{
    boolean b,a;
    b = true;
    a = !b;
    print(a);
}
